--- a/Project-TimViecLam/public/home/css/style.css
+++ b/Project-TimViecLam/public/home/css/style.css
@@ -4168,3 +4168,160 @@ div.expander.expanded:before {
   }
   
   /* Loading Job Animated */
+
+  
+/* company-detail */
+.bg-company{
+    background-color: #eff3f6;
+  }
+  .images-company{
+    height: 200px;
+    position: relative;
+    background-image:url(../../images/bg-price.jpeg);
+    height:200px;
+    background-size:cover;
+    background-position:center center;
+  }
+  .detail_company.cover-company {
+    padding-bottom: 20px;
+    padding-top: 25px;
+    background-color: #0080b7;
+    margin-bottom: 20px;
+  }
+  .text-back{
+    font-weight: 600;
+    color: #333333;
+    font-size: 22px;
+    margin: 5px 0;
+    width: 75%
+  }
+  .text-back:hover {
+    color: #1097d6;
+  }
+  .j_company .text_ellipsis strong {
+    font-weight: 600;
+  }
+  .icon-company-detail{
+    font-size: 14px; 
+    color: rgba(48, 48, 48, 0.2);
+  }
+  .lazy-load{
+    width:100%;
+    border:1px solid #eee;
+    margin-top: 10px;
+  }
+  .space-company{
+    margin-left: -18px;
+    margin-top: 10px;
+    padding-left: 15px;
+  }
+  .icon-radius {
+    padding: 10px;
+    border: 1px solid;
+    border-radius: 50%;
+  }
+  .icofont {
+    font-size: 14px;
+    speak: none;
+    font-style: normal;
+    font-weight: 400;
+    -webkit-font-feature-settings: normal;
+    font-feature-settings: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  .icofont-company{
+    color: rgb(97, 97, 97);
+    font-size: 14px;
+    speak: none;
+    font-style: normal;
+  
+    -webkit-font-feature-settings: normal;
+    font-feature-settings: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  .box-company-detail {
+  
+    padding: 10px 16px;
+    background-color: #fff;
+    border-radius: 3px;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    overflow: hidden;
+    margin-bottom: 20px;
+  }
+  .heading-title-company-detail {
+    font-weight: 600;
+  }
+  .job-item-company-detail{
+      font-size: 14px;
+      margin-bottom: 15px;
+      padding-bottom: 15px;
+      border-bottom: 1px dashed #ddd;
+  }
+  .job-item-company-detail strong{
+    font-size: 15px;
+  }
+  .font-button-company{
+    font-size: 14px;
+  }
+  .heading-company-title-font{
+    background-color: #fff;
+    border-radius: 3px;-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+    overflow: hidden;margin-bottom: 20px;
+    padding-bottom: 15px;
+  }
+  
+  .view-more-company {
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+  .heading-bold-company-detail{
+    font-weight: 600;
+  }
+  .view-more-company a {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #287ab9;
+    font-size: 14px;
+    font-weight: 700;
+    text-decoration: none;
+  }
+
+  .company-heading-title {
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #e5e5e5;
+    color: #182642;
+    font-size: 18px;
+    text-transform: uppercase;
+  }
+  .box-company-detail .content p {
+    margin-bottom: 20px;
+  }
+  /* company-detail */
+  
