--- a/Project-TimViecLam/public/admin/css/style.css
+++ b/Project-TimViecLam/public/admin/css/style.css
@@ -541,3 +541,11 @@
 .dataTables_length{
     margin-bottom: -40px !important;
 }
+
+
+.no-copys{
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
+    user-select: none;          /* Likely future */     
+  }
